goffice 0.10.42:

Jean:
	* Fix box plots when only outliers lie outside of the box. [#345]

Morten:
	* Introspection fixes.
	* Improve file saver api.
	* Avoid hash order dependency for plugins.

--------------------------------------------------------------------------
goffice 0.10.41:

Morten:
	* Avoid excess precision of graph ticks.

--------------------------------------------------------------------------
goffice 0.10.40:

Hiroshi Hatake:
	* Introspection fixes. [#793684]

Morten:
	* Fixes required for running with musl.  [#794115]
	* Store last-known modtime for GODoc.
	* Option menus: handle markup for labels.
	* Introspection fixes
	* Improve font selector sizing a bit.

--------------------------------------------------------------------------
goffice 0.10.39:

Morten:
	* sinpi/cospi/tanpi/cotpi improvement.

--------------------------------------------------------------------------
goffice 0.10.38:

Morten:
	* Avoid a few dubious uses of deprecated gtk+ functions.
	* Reduce number of compiler warnings.

--------------------------------------------------------------------------
goffice 0.10.37:

--------------------------------------------------------------------------
goffice 0.10.36:

Jean:
	* Fix engineering format. [#785669]
	* Fix crash in 3D plots when X or Y values are missing. [#788437]
	* Don't use invalid styles in legend from contour or surface plots imported
	from Excel. [#788861]
	* Fix documentation build with recent gtk-doc. [#788710]

--------------------------------------------------------------------------
goffice 0.10.35:

Morten:
	* Fix quad-precision overflow problem.

--------------------------------------------------------------------------
goffice 0.10.34:

Morten:
	* Fix rich-text format problem.

--------------------------------------------------------------------------
goffice 0.10.33:

Jean:
	* Make box plots look like bar plots in legends. [#773825]
	* Fix conditional compilation for long double. Patch from Ludovic