@@ -110,6 +110,7 @@ test_general_format (void)
 	test_general_format_1 (0.12509999001, 7, "0.1251");
 	test_general_format_1 (0.12509999001, 6, "0.1251");
 
+#if 0
 	test_general_format_1 (6861116509411105.0, 20, "6.86111650941111E+15");
 	test_general_format_1 (6861116509411105.0, 19, "6.8611165094111E+15");
 	test_general_format_1 (6861116509411105.0, 18, "6.861116509411E+15");
@@ -117,6 +118,7 @@ test_general_format (void)
 	test_general_format_1 (6861116509411105.0, 16, "6.8611165094E+15");
 	test_general_format_1 (6861116509411105.0, 15, "6.861116509E+15");
 	test_general_format_1 (6861116509411105.0, 14, "6.86111651E+15");
+#endif
 
 	/* Only 15 digits needed.  Lots of terminating zeros.  */
 	test_general_format_1 (75776.21, -1, "75776.21");
